ローカルで管理していた値をDBで扱うように修正
